--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -243,7 +243,7 @@ DocumentRoot "/app/www"
     #
     # Controls who can get stuff from this server.
     #
-    Allow from all
+    Require all granted
 </Directory>
 
 <IfModule mod_fastcgi.c>
