--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -266,7 +266,9 @@ DocumentRoot "/app/www"
 # viewed by Web clients. 
 #
 <Files ".ht*">
-    Require all denied
+    Order allow,deny
+    Deny from all
+    Satisfy All
 </Files>
 
 #
