--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -258,7 +258,8 @@ DocumentRoot "/app/www"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html index.php
+    DirectoryIndex index.html
+    DirectoryIndex index.php
 </IfModule>
 
 #
